add immunity system: ability to prohibit managers from punishing a member