@@ -1,4 +1,4 @@
-package com.example.my_bot.command.commands.member;
+package com.example.my_bot.command.commands.immunity;
 
 import com.example.my_bot.annotation.Command;
 import com.example.my_bot.client.VkChatClient;
@@ -15,8 +15,8 @@ import com.example.my_bot.exception.member.MemberException;
 import com.example.my_bot.exception.role.RoleException;
 import com.example.my_bot.mapper.MessageMapper;
 import com.example.my_bot.resolver.UserInputResolver;
-import com.example.my_bot.service.MemberService;
 import com.example.my_bot.service.GlobalUserService;
+import com.example.my_bot.service.MemberService;
 import com.vk.api.sdk.exceptions.ApiException;
 import com.vk.api.sdk.exceptions.ClientException;
 import lombok.Getter;
@@ -25,12 +25,13 @@ import lombok.extern.slf4j.Slf4j;
 
 import static com.example.my_bot.constant.MessageConstant.*;
 import static com.example.my_bot.enumeration.DefaultRole.ADMINISTRATOR;
+import static com.example.my_bot.enumeration.DefaultRole.SENIOR_MODERATOR;
 import static com.example.my_bot.utils.TextUtils.*;
 
 @Slf4j
-@Command(mainCommandName = "назначить", alternativeCommandNames = {"выдатьроль", "датьроль"}, defaultRole = ADMINISTRATOR, eventable = true)
+@Command(mainCommandName = "иммунитет", alternativeCommandNames = {"иммун", "immunity"}, defaultRole = SENIOR_MODERATOR, eventable = true)
 @RequiredArgsConstructor
-public class AssignMemberCommand implements ChatCommand {
+public class AssignImmunityCommand implements ChatCommand {
 
     @Getter
     private final CommandCooldown cooldown = new CommandCooldown(5,60);
@@ -46,8 +47,6 @@ public class AssignMemberCommand implements ChatCommand {
     private final MessageMapper messageMapper;
 
 
-
-
     @Override
     public void execute(CommandMessageDto messageDto) throws ClientException, ApiException {
 
@@ -57,65 +56,59 @@ public class AssignMemberCommand implements ChatCommand {
         SendMessageDto sendMessage = messageMapper.toSendMessageDto("",true, messageDto);
 
         // варианты:
-        // !назначить @durov администратор
-        // !назначить администратор (пересланное смс)
+        // !иммунитет @durov администратор
+        // !иммунитет администратор (пересланное смс)
 
         if(args.length==0){
             sendMessage.setText(NOT_ENOUGH_ARGUMENTS_MESSAGE);
             vkChatClient.sendText(sendMessage);
             return;
         }
-        long userToAssign;
-        String roleToGive;
+        long userToAlter;
+        String immuneRoleToGive;
 
         ParseMemberInputResult parseResult = userInputResolver.getMemberIdByAnyInput(messageDto,0);
         if(parseResult.getMemberId().isPresent()){
-            userToAssign = parseResult.getMemberId().get();
+            userToAlter = parseResult.getMemberId().get();
         }else{
             sendMessage.setText(MEMBER_ARGUMENT_ABSENTS);
             vkChatClient.sendText(sendMessage);
             return;
         }
         if(!parseResult.isFwdMessage()){
-            // !назначить @durov администратор
+            // !иммунитет @durov администратор
             if(args.length<2){
                 sendMessage.setText(NOT_ENOUGH_ARGUMENTS_MESSAGE);
                 vkChatClient.sendText(sendMessage);
                 return;
-            } roleToGive=args[1];
+            } immuneRoleToGive=args[1];
         }else{
-            // !назначить администратор (пересланное смс)
-            roleToGive=args[0];
+            // !иммунитет администратор (пересланное смс)
+            immuneRoleToGive=args[0];
         }
-        if(isNumber(roleToGive)&&!isValidInteger(roleToGive)){
+        if(isNumber(immuneRoleToGive)&&!isValidInteger(immuneRoleToGive)){
             sendMessage.setText(NOT_VALID_INTEGER_MESSAGE);
             vkChatClient.sendText(sendMessage);
             return;
         }
 
-        AssignMemberResult assignResult;
+        RoleDto newImmuneRole;
         try{
-         if(isNumber(roleToGive)){
-            assignResult= memberService.assignNewRoleToMember(chatId, userToAssign,Integer.parseInt(roleToGive), messageDto.getFromId());
+         if(isNumber(immuneRoleToGive)){
+            newImmuneRole= memberService.assignImmunityToMember(chatId, userToAlter,Integer.parseInt(immuneRoleToGive), messageDto.getFromId());
          }else{
-            assignResult = memberService.assignNewRoleToMember(chatId, userToAssign,roleToGive, messageDto.getFromId());
+            newImmuneRole = memberService.assignImmunityToMember(chatId, userToAlter,immuneRoleToGive, messageDto.getFromId());
          }
         }catch(MemberException | RoleException | CommandException e){
             sendMessage.setText(e.getMessage());
             vkChatClient.sendText(sendMessage);
             return;
         }
-            RoleDto oldRole = assignResult.getPreviousRole();
-            RoleDto newRole = assignResult.getNewRole();
 
-            String username = userService.getUserFullNameInRequiredCase(userToAssign, NameCase.GENITIVE);
+        String username = userService.getUserFullNameInRequiredCase(userToAlter, NameCase.ACCUSATIVE);
 
-            sendMessage.setText(
-                    String.format(MEMBER_ROLE_HAS_BEEN_CHANGED,
-                    createMention(userToAssign),username,oldRole.getRoleName(), newRole.getRoleName())
-            );
-            vkChatClient.sendText(sendMessage);
-
+        sendMessage.setText("✅ Теперь на %s(%s) не смогут воздействовать участники с ролью «%s» и ниже.".formatted(createMention(userToAlter), username, newImmuneRole.getRoleName()));
+        vkChatClient.sendText(sendMessage);
     }
 
 
